t+sv:[[i]] ([[WT:EDIT|Assisted]]) <at#53239393>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -372,7 +372,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Slovene: {{t-needed|sl}}
 * Spanish: {{t-needed|es}}
 * Swahili: {{t-needed|sw}}
-* Swedish: {{t-needed|sv}}
+* Swedish: {{t+|sv|i}}
 * Veps: {{t-needed|vep}}
 * Volapük: {{t-needed|vo}}
 * Votic: {{t-needed|vot}}
