/* Verb */ +synonyms <enumerate#53240298>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -13,6 +13,9 @@ From {{der|en|la|enumerātus}} < {{m|la|enumerō}}.
 # To [[specify]] each [[member]] of a [[sequence]] individually in incrementing order.
 # To [[determine]] the [[amount]] of.
 
+====Synonyms====
+* {{sense|determine the amount of}} {{l|en|enumerate}}, {{l|en|number}}; see also [[Thesaurus:count]]
+
 ====Translations====
 {{trans-top|to specify each member of a sequence individually in incrementing order}}
 * Bulgarian: {{t+|bg|изброявам|sc=Cyrl}}
