t+hu:[[kvadrilliárd]] t-balance ([[WT:EDIT|Assisted]]) <octillion#53252815>

--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -23,10 +23,11 @@
 * Finnish: {{t|fi|kvadriljardi}}
 * French: {{t+|fr|quadrilliard}}
 * German: {{t+|de|Quadrilliarde}}
+* Hungarian: {{t|hu|kvadrilliárd}}
 * Italian: {{t|it|quatriliardo}}
 * Japanese: {{t|ja|千秭|tr= せんじょ，senjo/せんし, senshi|sc=Jpan}}
-* Malay: {{t|ms|oktilion}}
 {{trans-mid}}
+* Malay: {{t|ms|oktilion}}
 * Polish: {{t+|pl|kwadryliard|m}}
 * Portuguese: {{t+|pt|octilhão}}
 * Russian: {{t+|ru|октиллион}}
