t+osa:[[sį́ka]] ([[WT:EDIT|Assisted]]) <squirrel#53252878>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -153,6 +153,7 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * Ojibwe: {{t|oj|ajidamoo}}
 * Old English: {{t|ang|ācweorna|m}}
 * Old Norse: {{t|non|íkorni|m}}
+* Osage: {{t|osa|sį́ka}}
 * Ossetian: {{t|os|ӕхсӕрӕг}}, {{t|os|ӕхсӕрсӕттӕг}}
 * Ottawa: {{t|otw|jidmoo}}
 * Persian: {{t+|fa|سنجاب|tr=sanjâb|sc=fa-Arab}}, {{t|fa|وروره|tr=varvare|sc=fa-Arab}}
