--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -14,7 +14,7 @@ From {{der|en|la|enumerātus}} < {{m|la|enumerō}}.
 # To [[determine]] the [[amount]] of.
 
 ====Synonyms====
-* {{sense|determine the amount of}} {{l|en|enumerate}}, {{l|en|number}}; see also [[Thesaurus:count]]
+* {{sense|determine the amount of}} {{l|en|number}}, {{l|en|tally}}; see also [[Thesaurus:count]] or [[Thesaurus:tick off]]
 
 ====Translations====
 {{trans-top|to specify each member of a sequence individually in incrementing order}}
