--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -50,10 +50,10 @@ From {{prefix|en|multi|million}}.
 ====Translations====
 {{trans-top|having more than 2,000,000 in the million range.}}
 * Finnish: {{t|fi|monimiljoonainen}}
-* French: {{t+|fr|multimillion}}, {{t+|fr|multimillionnaire|m|f}}
+* French: {{t+|fr|multimillionnaire|m|f}}
 {{trans-mid}}
 * Manx: {{t|gv|yl-villioonagh}}
-* Italian: {{t|it|multimillione}}, {{t|it|multimilionario|m}}, {{t|it|multimilionaria|f}}
+* Italian: {{t|it|multimilionario|m}}, {{t|it|multimilionaria|f}}
 * Russian: {{t+|ru|многомиллио́нный}}
 {{trans-bottom}}
 
