--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -100,7 +100,7 @@
 * Norwegian: {{t|no|amerikansk-engelsk}}
 * Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t+|pt|inglês americano|m}}
-* Romanian: {{t|ro|engleza americana|f|f-p|alt=engleză americană}}
+* Romanian: {{t|ro|engleză americană|f}}
 * Russian: {{t|ru|америка́нский англи́йский|m}}
 * Spanish: {{t|es|inglés estadounidense|m}}, {{t|es|inglés americano|m}}
 * Swahili: {{t|sw|Kiingereza cha Kimarekani}}
