--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -9,7 +9,7 @@
 
 ===Etymology 1===
 {{PIE root|en|bʰer}}
-{{etyl|enm|en}} {{m|enm|furet}}, {{m|enm|ferret}}, from {{etyl|xno|en}} {{m|fro|firet}}, {{m|fro|furet}}, diminutive of {{etyl|fro|en}} {{m|fro|fuiron||weasel, ferret}}, from {{etyl|LL.|en}} {{m|la|furo||cat; robber}}, diminutive of {{etyl|la|en}} {{m|la|fur||thief}}.
+From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{der|en|VL.|*furittum||weasel, ferret}}, diminutive of {{der|en|la|fūr||thief}}.
 
 ====Noun====
 {{en-noun}}
