--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 * Greek: {{t+|el|φροντίζω|sc=Grek}}, {{t+|el|μεριμνώ|sc=Grek}}
 {{trans-mid}}
+* Interlingue: {{t|ie|atender}}
 * Latin: {{t|la|attendō}}, {{t+|la|audio}}
 * Portuguese: {{t|pt|cuidar de}}
 * Russian: {{t|ru|уделя́ть внима́ние|impf}}, {{t|ru|удели́ть внима́ние|pf}}, {{t+|ru|занима́ться|impf}}, {{t+|ru|заня́ться}}, {{t+|ru|име́ть де́ло|impf}}
@@ -100,6 +101,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
 {{trans-mid}}
 * Ido: {{t+|io|asistar}}
+* Interlingue: {{t|ie|assister}}
 * Irish: {{t|ga|freastail}}
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}}, {{t+|ja|立ち会う|tr=たちあう, tachiau}}
@@ -120,6 +122,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Greek:
 *: Ancient: {{t|grc|φοιτάω}} {{qualifier|school}}
 {{trans-mid}}
+* Interlingue: {{t|ie|frequentar}}
 * Portuguese: {{t+|pt|frequentar}}
 * Spanish: {{t+|es|cursar}}
 {{trans-bottom}}
