--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -77,7 +77,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * Galician: {{t+|gl|agarrar}}
 * German: {{t+|de|ergreifen}}, {{t+|de|fassen}}, {{t+|de|greifen}}
 * Greek:
-*: Ancient: {{t|grc|συλλαμβάνω}}
+*: Ancient: {{t|grc|ἁρπάζω}}, {{t|grc|συλλαμβάνω}}
 * Hungarian: {{t+|hu|megfog}}, {{t+|hu|megragad}}
 * Italian: {{t+|it|prendere}}, {{t+|it|afferrare}}
 * Japanese: {{t|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
