--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -51,6 +51,7 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 * Greek: {{t|el|ανώτατο όριο|n}}, {{t+|el|άκρον άωτον|n}}
 * Hebrew: {{t|he|מַכְּסִימוּם|m|tr=maximum}}, {{t+|he|מֵרַב|m|tr=mēráv}}
 * Ido: {{t+|io|maximo}}
+* Interlingue: {{t|ie|maximum}}
 * Italian: {{t+|it|massimo|m}}
 * Japanese: {{t+|ja|最大|tr=さいだい, saidai}}, {{t|ja|極大|tr=きょくだい, kyokudai}}
 {{trans-mid}}
