--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -76,6 +76,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Ido: {{t+|io|daxo}}
 * Indonesian: {{t|id|biul}}
 * Interlingua: {{t|ia|taxon}}
+* Interlingue: {{t|ie|taxon}}
 * Irish: {{t+|ga|broc|m}}
 * Italian: {{t+|it|tasso|m}}
 * Japanese: {{t+|ja|アナグマ|tr=anaguma}}, {{t+|ja|穴熊|tr=あなぐま, anaguma}}
@@ -194,6 +195,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 {{trans-mid}}
 * Greek: {{t+|el|ενοχλώ}}, {{t+|el|παρενοχλώ}}, {{t+|el|πειράζω}}
 * Hungarian: {{t+|hu|piszkál}}
+* Interlingue: {{t|ie|tormentar}}, {{t|ie|molestar}}
 * Latin: {{t|la|sollicitō}}, {{t|la|inrītō}}, {{t|la|irrītō}}
 * Maori: {{t|mi|mamare}} {{qualifier|with constant questions}}
 * Russian: {{t+|ru|дразни́ть|impf}}, {{t+|ru|беспоко́ить|impf}}, {{t+|ru|досажда́ть|impf}}
