t+oc:[[consum]] ([[WT:EDIT|Assisted]]) <consumption#53317841>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -54,6 +54,7 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 * Norwegian:
 *: Bokmål: {{t|nb|forbruk|n}}, {{t|nb|konsum|n}}
 *: Nynorsk: {{t|nn|forbruk|n}}, {{t|nn|konsum|n}}
+* Occitan: {{t|oc|consum|m}}
 * Portuguese: {{t+|pt|consumo|m}}
 * Romanian: {{t+|ro|consum|n}}
 * Russian: {{t+|ru|потребле́ние|n}}
