/* English */ +cat <drunken trees#53319522>

--- a/en/d/drunken trees.856197.wikitext
+++ b/en/d/drunken trees.856197.wikitext
@@ -20,3 +20,5 @@ By analogy to the stumbling gait of a person who is drunk on alcohol.
 
 ===Further reading===
 * {{pedialite}}
+
+{{topics|en|Trees}}
