--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -37,7 +37,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Galician: {{t|gl|estocar}}, {{t|gl|prometer}}
 * German: {{t+|de|zusichern}}, {{t+|de|versprechen}}, {{t+|de|geloben}}, {{t+|de|zusagen}}
 * Hebrew: {{t|he|נשבע|tr=nishbá|sc=Hebr}}
-* Hungarian: {{t+|hu|ígér}}, {{t+|hu|megígér}}, {{t+|hu|esküszik}}, {{t|hu|szavát adja}}, {{t|hu|elkötelezi magát}}
+* Hungarian: {{t+|hu|ígér}}, {{t+|hu|megígér}}, {{t+|hu|esküszik}}, {{t|hu|szavát adja}}, {{t|hu|[[elkötelez]]i [[magát]]}}
 * Icelandic: {{t+|is|sverja}}, {{t+|is|lofa}}
 * Italian: {{t+|it|promettere}}, {{t+|it|impegnarsi}}
 * Japanese: {{t+|ja|公約|tr=kōyaku suru|alt=公約する}}, {{t+|ja|保証|tr=ほしょうする, hoshō suru|alt=保証する|sc=Jpan}}
