--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -69,6 +69,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * French: {{t|fr|mettre en gage}}
 * Galician: {{t|gl|gravecer}}, {{t|gl|engaxar}}, {{t|gl|piñorar}}
 * German: {{t+|de|verpfänden}}
+* Hungarian: {{t|hu|zálogba ad}}, {{t+|hu|elzálogosít}}, {{t|hu|biztosítékul, fedezetül ad}}
 * Latgalian: {{t|ltg|aizlyka}}
 {{trans-mid}}
 * Latvian: {{t|lv|ķīla}}
@@ -83,6 +84,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 {{trans-top|to drink}}
 * Finnish: {{t|fi|[[juoda]] [[jonkun]] [[malja]]}}
 {{trans-mid}}
+* Hungarian: {{t|hu|iszik valaki egészségére}}
 {{trans-bottom}}
 
 ===Noun===
