t+cdm:[[प्‍याक्‌]] t+duu:[[waq]] t+ium:[[dungz]] t+sg:[[gaduru]] t+sg:[[ngûru]] t+cjm:[[ꨚꨝꨶꨬ]] t+cjm:[[ꨂꩆ]] t+pau:[[babii]] t+mg:[[kisoa]] t+tet:[[fahi]] t+kac:[[wa']] t+new:[[फा]] t+pac:[[alic]] t+pac:[[alíc]] t+kpm:[[sur]] t+kpm:[[un]] t+bdq:[[nhŭng]] t+kha:[[sniang]] ([[WT:EDIT|Assisted]]) <pig#53322762>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -110,6 +110,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Atayal: {{t|tay|bzyok}}
 * Avar: {{t|av|болъон}}
 * Azerbaijani: {{t+|az|donuz}}
+* Bahnar: {{t|bdq|nhŭng}}
 * Balinese: {{t|ban|celeng}}
 * Bashkir: {{t|ba|сусҡа}}
 * Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
@@ -127,6 +128,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Chamicuro: {{t|ccc|kuuchi}}
 * Chamorro: {{t|ch|babui}}
 * Chechen: {{t|ce|жаргӏа}}
+* Chepang: {{t|cdm|प्‍याक्‌}}
 * Cherokee: {{t|chr|ᏏᏆ}}
 * Chichewa: {{t|ny|nkhumba}}
 * Chinese:
@@ -148,7 +150,9 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Da'a Kaili: {{t-check|kzf|vavu}} {{qualifier|Rai Kaili}}
 * Dalmatian: {{t|dlm|puarc|m}}
 * Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
+* Drung: {{t|duu|waq}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
+* Eastern Cham: {{t|cjm|ꨚꨝꨶꨬ|tr=pabwei}}, {{t|cjm|ꨂꩆ|tr=un}}
 * Eastern Mari: {{t|chm|сӧсна}}
 * Erzya: {{t|myv|туво}}
 * Ese: {{t|mcq|maha}}
@@ -191,15 +195,18 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Interlingua: {{t|ia|porco}}
 * Irish: {{t+|ga|muc|f}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
+* Iu Mien: {{t|ium|dungz}}
 * Japanese: {{t+|ja|豚|tr=ぶた, buta}}, {{t+|ja|ブタ|tr=buta}}
 * Javanese: {{t+|jv|babi}}
+* Jingpho: {{t|kac|wa'}}
 * Kabardian: {{t|kbd|кхъуэ}}
 * Kannada: {{t+|kn|ಹಂದಿ}}
 * Karelian: {{t|krl|počči}}
 * Kazakh: {{t+|kk|шошқа}}
-* Khasi: {{t|kha|sniang}}
+* Khasi: {{t|kha|sniang}}, {{t|kha|sniang}}
 * Khmer: {{t+|km|ជ្រូក}}
 * Kimaragang: {{t|kqr|wogok}}
+* Koho: {{t|kpm|sur}}, {{t|kpm|un}}
 * Kombio: {{t|xbi|wurokn}}
 * Korean: {{t+|ko|돼지}}
 * Krisa: {{t|ksi|a}}
@@ -224,6 +231,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Luxembourgish: {{t|lb|Schwäin|n}}
 * Lü: {{t|khb|ᦖᦴ}}
 * Macedonian: {{t|mk|свиња|f}}
+* Malagasy: {{t+|mg|kisoa}}
 * Malay: {{t+|ms|babi}}, {{t+|ms|khinzir}}
 * Malayalam: {{t+|ml|പന്നി}}
 * Maltese: {{t|mt|ħanżir|m}}, {{t|mt|qażquż|m}}
@@ -244,6 +252,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Nahuatl: {{t+|nah|pitzotl}}
 * Navajo: {{t|nv|bisóodi|sc=Latn}}
 * Nepali: {{t+|ne|सुँगुर|tr=sũgur}}
+* Newari: {{t|new|फा }}
 * Ngazidja Comorian: {{t|zdj|purunku}}
 * Nii: {{t|nii|kung}}
 * Nivkh: {{t|niv|овӻоӈ}}
@@ -260,6 +269,8 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Oriya: {{t|or|ଘୁଷୁରିଛୁଆ}}
 * Ossetian: {{t|os|хуы}}
 * Ottawa: {{t|otw|gookoosh}}
+* Pacoh: {{t|pac|alic}}, {{t|pac|alíc}}
+* Palauan: {{t|pau|babii}}
 * Pashto: {{t+|ps|خنځير|m|tr=xanjír}}, {{t|ps|خوګ|m|tr=xug}}
 * Persian: {{t+|fa|خوک|tr=xuk}}
 * Plautdietsch: {{t+|pdt|Schwien|n}}
@@ -280,6 +291,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Northern Sami: {{t|se|spiidni}}
 *: Skolt Sami: {{t|sms|šââ´ǩǩ}}
 * Samoan: {{t|sm|pua'a}}
+* Sango: {{t|sg|gaduru}}, {{t|sg|ngûru}}
 * Sanskrit: {{t+|sa|सूकर}}
 * Santali: {{t|sat|ᱥᱩᱠᱨᱤ}}
 * Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
@@ -309,6 +321,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Taos: {{t|twf|kùciʼína}}
 * Tatar: {{t+|tt|дуңгыз}}, {{t+|tt|чучка}}
 * Telugu: {{t+|te|పంది}}, {{t+|te|సూకరము|m}}
+* Tetum: {{t|tet|fahi}}
 * Thai: {{t+|th|หมู}}
 * Tibetan: {{t|bo|ཕག་པ}}
 * Timugon Murut: {{t|tih|bawi}}
