--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -74,7 +74,7 @@ From {{m|la|multus||much, many}} + {{m|la|color||color}}.
 ==Spanish==
 
 ===Etymology===
-From {{etyl|la|es}} {{m|la|multicolor}}; see above.
+From {{der|es|la|multicolor}}; see above.
 
 ===Adjective===
 {{es-adj|pl=multicolores}}
