--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * {{l|en|Otter Tail County}}
 * {{l|en|ottery}}
 * {{l|en|river otter}} (''{{l|mul|Lutra lutra}}'')
-* {{l|en|sea otter}} ({{taxlink|Enhydra lutris|species|ver=190214}})
+* {{l|en|sea otter}} (''{{ll|mul|Enhydra lutris}}'')
 {{rel-bottom}}
 
 =====Translations=====
