--- a/en/r/real-life.741522.wikitext
+++ b/en/r/real-life.741522.wikitext
@@ -1,9 +1,8 @@
 {{also|real life}}
-
 ==English==
 
 ===Adjective===
-{{en-adj}}
+{{en-adj|head=[[real]]-[[life]]}}
 
 # As happens in [[real life]]; not [[fictional]].
 #* {{quote-journal|lang=en|date=2013-06-29|volume=407|issue=8842|page=55|magazine={{w|The Economist}}
