--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{wikipedia|yes and no}}
-Colloquial/dialectal form of {{m|en|yea}} or {{m|en|yes}}.
+Colloquial form of {{m|en|yea}} or {{m|en|yes}}.
 
 ===Pronunciation===
 * {{IPA|[jɛə̯]|lang=en}}, {{IPAchar|[jɛ.ə]}}, or {{IPAchar|[jæə̯]}}
