--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -2,6 +2,9 @@
 ==English==
 {{wikipedia|Limu (algae)}}
 
+===Etymology===
+Borrowed from {{bor|en|haw|limu}}, from {{der|en|poz-pep-pro|*rimu}}, from {{der|en|poz-pnp-pro|*rimu}}, from {{der|en|poz-pol-pro|*rimu}}, from {{der|en|poz-oce-pro|*limut}}, from {{der|en|pqe-pro|*limut}}, from {{der|en|poz-cet-pro|*limut}}, from {{der|en|poz-pro|*limut}}.
+
 ===Noun===
 {{en-noun|~}}
 
