--- a/en/n/Niphon.775906.wikitext
+++ b/en/n/Niphon.775906.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ja|en}} [[日本]] (formerly ''Niffon'', now ''Nippon'' or ''Nihon'') "Japan".
+From {{bor|en|ja|日本}} (formerly ''Niffon'', now ''Nippon'' or ''Nihon'') "Japan".
 
 ===Proper noun===
 {{en-proper noun}}
