--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -13,7 +13,7 @@
 * Arabic: {{t-needed|ar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|知己|tr=zhījǐ|sc=Hani}}, {{t+|cmn|知音|tr=zhīyīn|sc=Hani}}
-* Dutch: {{t+|nl|getrouwe|m|f}}, {{t|nl|boezem vriend}}
+* Dutch: {{t+|nl|getrouwe|m|f}}, {{t|nl|boezemvriend|m}}, {{t|nl|boezemvriend|f}}
 * Estonian: {{t|et|südamesõber}}
 * Finnish: {{t+|fi|sydänystävä}}
 * French: {{t|fr|ami(e) intime|m|f}}
