--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -19,7 +19,7 @@
 * Mongolian: {{t|mn|хоёр дахь ирэлт|sc=Cyrl}}
 * Portuguese: {{t|pt|segunda vinda|f}}
 * Romanian: {{t|ro|a doua venire|f}}
-* Russian: {{t-needed|ru}}
+* Russian: {{t|ru|второе пришествие|n|tr=vtoroe prishestvie}}
 * Spanish: {{t|es|segunda venida|f}}
 {{trans-bottom}}
 
