t+es:[[limitado]] ([[WT:EDIT|Assisted]]) <bound#53354795>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -96,6 +96,7 @@ See {{m|en|bind}}.
 {{trans-mid}}
 * Italian: {{t+|it|obbligato}}, {{t+|it|costretto}}
 * Russian: {{t+|ru|свя́занный}}, {{t+|ru|обяза́нный}}
+* Spanish: {{t+|es|limitado}}
 {{trans-bottom}}
 
 ===Etymology 2===
