--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -56,6 +56,9 @@ From {{inh|de|gmh|}}, from {{inh|de|goh|bitten}}, from {{inh|de|gem-pro|*bidjanÄ
 ====Conjugation====
 {{de-conj-strong|bitt|bat|gebeten|h|e||bÃ¤t|a}}
 
+====Derived terms====
+* [[abbitten]]
+
 ===Further reading===
 * {{R:Duden}}
 
