--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -77,7 +77,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 {{trans-mid}}
 * Interlingue: {{t|ie|atender}}
 * Latin: {{t|la|attendō}}, {{t+|la|audio}}
-* Portuguese: {{t|pt|cuidar de}}
+* Portuguese: {{t|pt|cuidar}}
 * Russian: {{t|ru|уделя́ть внима́ние|impf}}, {{t|ru|удели́ть внима́ние|pf}}, {{t+|ru|занима́ться|impf}}, {{t+|ru|заня́ться}}, {{t+|ru|име́ть де́ло|impf}}
 * Scottish Gaelic: {{t|gd|sgeadaich}}
 * Spanish: {{t+|es|atender}}, {{t+|es|ocupar|alt=ocuparse de}}
