--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Georgian: {{t|ka|წილადი}}
 * German: {{t+|de|Bruch|m}}
 * Greek: {{t+|el|κλάσμα|n}}
+*: Ancient: {{t|grc|μόριον|n}}
 * Greenlandic: {{t|kl|brøki}}
 * Hindi: {{t+|hi|भिन्न|m}}
 * Hungarian: {{t+|hu|tört}}, {{t+|hu|törtszám}}
