--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -10,7 +10,11 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * {{a|Canada|US}} {{IPA|/ˈskwɝl/|/ˈskwɝl̩/|/ˈskwɝəl/|lang=en}}
 * {{a|New England|very dated}} {{IPA|/ˈskwɪɹəl/|lang=en}}
 * {{audio|En-ca-squirrel.ogg|Audio (Canada)|lang=en}}
-* Squirrel(plural Squeen)
+* {{rhymes|ɜː(ɹ)l|ɪɹəl|lang=en}}
+
+===Noun===
+{{wikispecies|Sciuridae}}
+{{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 #* '''1865''', Henry David Thoreau, ''Cape Cod'', Chapter IX. "The Sea and the Desert", page 187.
