t+hi:[[सूअर]] ([[WT:EDIT|Assisted]]) <pig#53424394>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -404,6 +404,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Galician: {{t+|gl|cocho|m}}, {{t|gl|porcallón|m}}
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n}}
+* Hindi: {{t+|hi|सूअर|m}}
 * Icelandic: {{t+|is|svín|n}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}} {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t+|it|stronza|f}}
 * Latvian: {{t+|lv|cūka|f}}
