--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -137,7 +137,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 *: Norwegian Nynorsk: {{t|nn|på}}
 * Novial: {{t|nov|che}}, {{t|nov|an}}, {{t|nov|sur}}
 * Persian: {{t+|fa|در|tr=dar}}
-* Polish: {{t+|pl|u}}, {{t+|pl|przy}}
+* Polish: {{t+|pl|w}}, {{t+|pl|u}}, {{t+|pl|przy}}
 * Portuguese: {{t+|pt|a}}, {{t+|pt|em}}
 * Rapa Nui: {{t|rap|i}}
 * Romanian: {{t+|ro|la}}
