--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -1,659 +1,5 @@
 {{also|Blow|b'low}}
-==English==
-{{wikipedia|dab=Blow}}
-
-===Pronunciation===
-* {{a|UK}} {{IPA|/bləʊ/|[bləʊ̯]|lang=en}}
-* {{a|US}} {{IPA|/bloʊ/|[bloʊ̯]|lang=en}}
-* {{audio|en-us-blow.ogg|Audio (US)|lang=en}}
-* {{rhymes|əʊ|lang=en}}
-
-===Etymology 1===
-{{PIE root|en|bʰleh₁|id=blow}}
-From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate, sound}}, from {{inh|en|gem-pro|*blēaną||to blow}} (compare German {{m|de|blähen}}), from {{der|en|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{cog|la|flō||to blow}} and {{cog|xcl|բեղուն||fertile}}).
-
-====Verb====
-{{en-verb|blows|blowing|blew|blown}}
-
-# {{lb|en|intransitive}} To produce an [[air]] [[current]].
-#* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''King Lear'', act 3, scene 2:
-#*: "'''Blow''', winds, and crack your cheeks! rage! '''blow'''!"
-#* '''1613''', [[w:William Shakespeare|William Shakespeare]], ''The Tempest'', act 1, scene 1:
-#*: "'''Blow''' till thou burst thy wind, if room enow!"
-#* Walton
-#*: Hark how it rains and '''blows'''!
-# {{lb|en|transitive}} To propel by an [[air]] [[current]].
-#: '''''Blow''' the dust off that book and open it up.''
-# {{lb|en|intransitive}} To be propelled by an [[air]] [[current]].
-#: ''The leaves '''blow''' through the streets in the fall.''
-# {{lb|en|transitive}} To create or shape by blowing; as in ''to blow bubbles'', ''to blow glass''.
-# To force a current of air upon with the mouth, or by other means.
-#: ''to '''blow''' the fire''
-# To clear of contents by forcing air through.
-#: ''to '''blow''' an egg''
-#: ''to '''blow''' one's nose''
-# {{lb|en|transitive}} To cause to make sound by blowing, as a musical instrument.
-# {{lb|en|intransitive}} To make a sound as the result of being blown.
-#: ''In the harbor, the ships' horns '''blew'''.''
-#* Milton
-#*: There let the pealing organ '''blow'''.
-# {{lb|en|intransitive|of a [[cetacean]]}} To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] which it has taken in while [[feeding]].
-#: ''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
-#: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
-# {{lb|en|intransitive}} To [[explode]].
-#: ''Get away from that burning gas tank! It's about to '''blow'''!''
-# {{lb|en|transitive|with "up"|or|with prep phrase headed by "to"}} To cause to explode, shatter, or be utterly destroyed.
-#: ''The demolition squad neatly '''blew''' the old hotel up.''
-#: ''The aerosol can was '''blown''' to bits.''
-# {{lb|en|transitive}} To cause sudden destruction of.
-#: ''He '''blew''' the tires and the engine.''
-# {{lb|en|intransitive}} To suddenly fail destructively.
-#: ''He tried to sprint, but his ligaments '''blew''' and he was barely able to walk to the finish line.''
-# {{lb|en|intransitive|slang}} To be very [[undesirable]]. (See also {{m|en|suck}}.)
-#: ''This '''blows'''!''
-# {{lb|en|transitive|slang}} To recklessly [[squander]].
-#: ''I managed to '''blow''' $1000 at blackjack in under an hour.''
-#: ''I '''blew''' $35 thou on a car.''
-#: ''We '''blew''' an opportunity to get benign corporate sponsorship.''
-# {{lb|en|transitive|vulgar}} To [[fellate]]; to perform [[oral sex]] on (usually a man)
-#: ''Who did you have to '''blow''' to get those backstage passes?''
-# {{lb|en|transitive|slang}} To [[leave]].
-#: ''Let's '''blow''' this joint.''
-# To make [[flyblown]], to defile, especially with fly eggs.
-#* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''[[w:Antony and Cleopatra|Antony and Cleopatra]]'', Act V, scene 2, line 55.
-#*: Shall they hoist me up,<br/>And show me to the shouting [[varletry]]<br/>Of censuring Rome? Rather a ditch in Egypt<br/>Be gentle grave unto me, rather on Nilus' mud<br/>Lay me stark naked, and let the water-flies<br/>'''Blow''' me into [[abhorring]]!
-#* '''1610''', ''[[s:The Tempest|The Tempest]]'', by [[w:William Shakespeare|Shakespeare]], act 3 scene 1
-#*: (FERDINAND)
-#*: I am, in my condition,
-#*: A prince, Miranda; I do think, a king;—
-#*: I [[would]] not so!—and would no more endure
-#*: This wooden slavery than to suffer
-#*: The [[flesh-fly]] '''blow''' my mouth.
-# {{lb|en|obsolete}} To spread by report; to publish; to disclose.
-#* Dryden
-#*: Through the court his courtesy was '''blown'''.
-#* Whiting
-#*: His language does his knowledge '''blow'''.
-# {{lb|en|obsolete}} To inflate, as with pride; to puff up.
-#* Shakespeare
-#*: Look how imagination '''blows''' him.
-# {{lb|en|intransitive}} To breathe hard or quick; to pant; to puff.
-#* Shakespeare
-#*: Here is Mistress Page at the door, sweating and '''blowing'''.
-# {{lb|en|transitive}} To put out of breath; to cause to blow from fatigue.
-#: ''to '''blow''' a horse''
-#: {{rfquotek|Sir Walter Scott}}
-# {{lb|en|obsolete}} To talk loudly; to boast; to storm.
-#* Bartlett
-#*: You '''blow''' behind my back, but dare not say anything to my face.
-# {{lb|en|slang|informal|AAVE}} To [[sing]]
-#: ''That girl has a wonderful voice; just listen to her '''blow'''!''
-# {{lb|en|Scientology|intransitive}} To [[leave]] the [[Church of Scientology]] in an unauthorized manner.
-
-=====Derived terms=====
-{{der3|en|title=Terms derived from ''blow'' (verb)
-| beblow
-| blow a gasket
-| blow a kiss
-| blow apart
-| blow away
-| blow down
-| blower
-| blowhard
-| blow hot and cold
-| blowhorn
-| blow it
-| blow it out one's ass
-| blowjob
-| blow me
-| blow off
-| blow off steam
-| blow one's horn
-| blow one's nose
-| blow one's top
-| blow one's trumpet
-| blow out
-| blowout
-| blow over
-| blow someone out of the water
-| blow someone's brains out
-| blow someone's cover
-| blow someone's mind
-| blow someone's socks off
-| blow the whistle
-| blow up
-| blow upon
-| blowup
-| blow up in one's face
-| blowy
-| glassblower
-| inblow
-| mind-blowing
-| outblow
-| suck and blow
-| there she blows
-}}
-
-=====Translations=====
-{{trans-top|to produce an air current}} <!--1-->
-* Arabic: {{t|ar|نَفَخَ}}
-* Armenian: {{t+|hy|փչել}}
-* Aromanian: {{t|rup|suflu}}
-* Asturian: {{t|ast|soplar}}
-* Azerbaijani: {{t|az|üfürmək}}, {{t+|az|əsmək}}
-* Belarusian: {{t|be|дзьмуць|impf}}, {{t|be|дуць|impf}}, {{t|be|ве́яць|impf}}
-* Bulgarian: {{t+|bg|ду́хам|impf}}, {{t+|bg|ве́я|impf}}
-* Burmese: {{t+|my|မှုတ်}}
-* Catalan: {{t+|ca|bufar}}
-* Chinese:
-*: Mandarin: {{t+|cmn|吹|tr=chuī}}, {{t+|cmn|颳}}, {{t+|cmn|刮|tr=guā}}
-* Czech: {{t+|cs|vát|impf}}, {{t+|cs|vanout}}, {{t+|cs|foukat|impf}}, {{t+|cs|vanout}}
-* Danish: {{t+|da|blæse}}, {{t|da|puste}}
-* Dutch: {{t+|nl|blazen}}, {{t+|nl|waaien}}
-* Esperanto: {{t+|eo|blovi}}
-* Faroese: {{t|fo|blása}}
-* Finnish: {{t+|fi|puhaltaa}}
-* French: {{t+|fr|souffler}}
-* Friulian: {{t|fur|soflâ}}
-* Galician: {{t+|gl|soprar}}
-* Georgian: {{t|ka|უბერავს}}, {{t|ka|დაუბერავს}}, {{t|ka|შეუბერავს}}, {{t|ka|ქრის}}
-* German: {{t+|de|blasen}}, {{t+|de|pusten}}, {{t+|de|wehen}}
-* Greek: {{t+|el|φυσώ}}
-*: Ancient: {{t|grc|ἄημι}}
-* Hungarian: {{t+|hu|fúj}}
-* Ido: {{t+|io|suflar}}
-* Indonesian: {{t+|id|tiup}}
-* Irish: {{t|ga|séid}}
-* Italian: {{t+|it|soffiare}}
-* Japanese: {{t+|ja|吹く|tr=[[ふく]], fuku}}
-* Kazakh: {{t|kk|соғу}}
-* Khmer: {{t+|km|បក់}}
-* Korean: {{t+|ko|불다}}
-* Kurdish:
-*: Sorani: {{t|ckb|فو}}
-* Kyrgyz: {{t+|ky|согуу}}
-* Lao: {{t|lo|ພັດ}}
-* Latgalian: {{t|ltg|pyust}}
-* Latin: {{t|la|flo}}, {{t|la|sufflo}}
-* Latvian: {{t+|lv|pūst}}
-{{trans-mid}}
-* Lithuanian: {{t+|lt|pūsti}}
-* Macedonian: {{t|mk|дува|impf}}
-* Malay: {{t|ms|tiup}}, {{t|ms|hembus}}
-* Maori: {{t|mi|ihi}}
-* Mongolian: {{t+|mn|үлээх}}
-* Ngazidja Comorian: {{t|zdj|ra|alt=hura}}
-* North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
-* Old Frisian: {{t|ofs|blā}}
-* Polish: {{t+|pl|dmuchać|impf}}, {{t+|pl|dąć|impf}}, {{t+|pl|wiać|impf}}
-* Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}, {{t+|pt|bufar}}
-* Quechua: {{t|qu|phukuy}}, {{t|qu|wayray}}
-* Rapa Nui: {{t|rap|puhi}}
-* Romanian: {{t+|ro|sufla}}
-* Romansch: {{t|rm|sufflar}}, {{t|rm|buffar}}, {{t|rm|zuflar}}, {{t|rm|zufler}}, {{t|rm|bufar}}, {{t|rm|sofflar}}, {{t|rm|boffar}}
-* Russian: {{t+|ru|дуть|impf}}, {{t+|ru|ду́нуть|pf}}, {{t+|ru|поду́ть|pf}}, {{t+|ru|ве́ять|impf}}, {{t+|ru|пове́ять|pf}}, {{t+|ru|сморка́ться|impf}}, {{t+|ru|сморкну́ться|pf}} ''blow the nose''
-* Scottish Gaelic: {{t|gd|sèid}}
-* Serbo-Croatian:
-*: Cyrillic: {{t|sh|ду́вати|impf}} {{qualifier|Bosnian, Serbian}}, {{t|sh|ду́хати|impf}} {{qualifier|Croatian}}
-*: Roman: {{t+|sh|dúvati|impf}} {{qualifier|Bosnian, Serbian}}, {{t+|sh|dúhati|impf}} {{qualifier|Croatian}}
-* Sicilian: {{t+|scn|ciusciari}}, {{t+|scn|sciusciari}}, {{t+|scn|susciari}}, {{t+|scn|ciuciari}}, {{t|scn|xuxari}}
-* Slovak: {{t|sk|duť|impf}}, {{t|sk|fúkať}}, {{t|sk|vanúť}}, {{t|sk|fúknuť}}
-* Slovene: {{t+|sl|pihati|impf}}
-* Sorbian:
-*: Lower Sorbian: {{t|dsb|duś|impf}}, {{t|dsb|dunuś|pf}}
-* Spanish: {{t+|es|soplar}}
-* Sundanese: {{t|su|tiup}}
-* Swahili: {{t|sw|puliza|alt=-puliza}}
-* Swedish: {{t+|sv|blåsa}}
-* Thai: {{t+|th|พัด}}
-* Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
-* Ukrainian: {{t|uk|ду́ти|impf}}, {{t|uk|ві́яти|impf}}
-* Uzbek: {{t+|uz|esmoq}}
-* Venetian: {{t|vec|supiar}}, {{t|vec|sufiar}}
-* Vietnamese: {{t+|vi|thổi}}, {{t+|vi|phù}}, {{qualifier|to blow on food}} {{t+|vi|phù phù}}
-* Welsh: {{t+|cy|chwythu}}
-* West Frisian: {{t|fy|blaze}}
-* Yiddish: {{t|yi|בלאָזן}}
-* Zazaki: {{t|zza|pıf kerden}}
-* Zealandic: {{t|zea|blaeze}}
-{{trans-bottom}}
-
-{{trans-top|to propel by an air current}} <!--2-->
-* Armenian: {{t+|hy|փչել}}
-* Chinese:
-*: Mandarin: {{t|cmn|刮走|tr=guāzǒu}}
-* Danish: {{t+|da|blæse}}, {{t|da|puste}}
-* Dutch: {{t+|nl|blazen}}
-* Finnish: {{t+|fi|puhaltaa}}
-* German: {{t+|de|blasen}}, {{t+|de|wegblasen}}, {{t|de|fortblasen}}, {{t|de|hinfortblasen}}, {{t+|de|pusten}}, {{t|de|wegpusten}}
-* Ido: {{t+|io|suflar}}
-* Irish: {{t|ga|séid}}
-{{trans-mid}}
-* Korean: {{t+|ko|불다}}
-* Maori: {{t|mi|pūawhe}}
-* Polish: {{t|pl|zdmuchnąć}}
-* Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
-* Russian: {{t+|ru|сдува́ть|impf}}, {{t+|ru|сдуть|pf}}
-* Scottish Gaelic: {{t|gd|sèid}}
-* Spanish: {{t+|es|soplar}}
-* Vietnamese: {{t+|vi|thở}}, {{t+|vi|thổi}}
-{{trans-bottom}}
-
-{{trans-top|to be propelled by an air current}} <!--3-->
-* Chinese:
-*: Mandarin: {{t|cmn|隨風飄動|tr=guā}}, {{t|cmn|随风飘动|tr=suífēng piāodòng}}
-* Danish: {{t+|da|blæse}}
-* Finnish: {{t+|fi|lentää}}, {{t|fi|lennähtää}}, {{t+|fi|lennellä}}
-* German: {{t+|de|wehen}}
-* Ido: {{t|io|suflesar}}
-* Irish: {{t|ga|séid}}
-* Korean: {{t+|ko|불리다}}
-{{trans-mid}}
-* Macedonian: {{t|mk|се вее}}
-* Maori: {{t|mi|pūawhe}}, {{t|mi|pongipongi}}
-* Portuguese: {{t|pt|[[ser]] [[soprado]]}}
-* Romanian: {{t|ro|fi purtat}}
-* Russian: {{t+|ru|относи́ть}}
-* Slovak: {{t|sk|letieť}}, {{t|sk|niesť sa}}
-* Swedish: {{t+|sv|blåsa}}
-* Vietnamese: {{t+|vi|bay}}
-{{trans-bottom}}
-
-{{trans-top|to create or shape by blowing}} <!--4-->
-* Chinese:
-*: Mandarin: {{t+|cmn|吹氣|tr=guā}}, {{t+|cmn|吹气|tr=chuīqì}}
-* Dutch: {{t+|nl|blazen}}
-* Finnish: {{t+|fi|puhaltaa}}
-* French: {{t+|fr|souffler}}
-* Hebrew: {{t|he|ניפח|tr=nipéakh}}
-* Irish: {{t|ga|séid}}
-* Korean: {{t+|ko|불다}}
-* Macedonian: {{t|mk|дува}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|assoprar}}
-* Romanian: {{t+|ro|umfla}}
-* Russian: {{t+|ru|выдува́ть|impf}}, {{t+|ru|вы́дуть|pf}}
-* Slovak: {{t|sk|nafúknuť}}, {{t|sk|nafukovať}}
-* Spanish: {{t+|es|soplar}}
-* Swedish: {{t+|sv|blåsa}}
-* Vietnamese: {{t+|vi|thổi}}
-{{trans-bottom}}
-
-{{trans-top|To force a current of air upon with the mouth, or by other means}}
-* Maori: {{t|mi|pūkeru}}
-* Russian: {{t+|ru|дуть|impf}}
-{{trans-mid}}
-* Slovak: {{t|sk|fúkať}}, {{t|sk|fúknuť}}
-{{trans-bottom}}
-
-{{trans-top|to blow a musical instrument to make it give a sound}} <!--5-->
-* Danish: {{t+|da|blæse}}, {{t|da|trutte}} {{qualifier|trumpet}}
-* Finnish: {{t+|fi|soittaa}}, {{t+|fi|puhaltaa}}
-* French: {{t+|fr|jouer|alt=jouer (de)}}, {{t+|fr|souffler|alt=souffler (dans)}}
-* Irish: {{t|ga|séid}}
-* Mongolian: {{t+|mn|үлээх}}
-* Ngazidja Comorian: {{t|zdj|pvuzia|alt=upvuzia}}
-* Polish: {{t+|pl|dąć|impf}}, {{t|pl|zadąć|pf}}, {{t+|pl|dmuchać|impf}}, {{t+|pl|dmuchnąć|pf}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|assoprar}}
-* Romanian: {{t|ro|cânta la un instrument}}
-* Russian: {{t+|ru|дуть|impf}}
-* Scottish Gaelic: {{t|gd|sèid}}
-* Slovak: {{t|sk|trúbiť}}, {{t|sk|hrať}}
-* Swedish: {{t+|sv|blåsa}}
-* Yiddish: {{t|yi|בלאָזן}}
-{{trans-bottom}}
-
-{{trans-top|to make a sound as if being blown}} <!--6-->
-* Finnish: {{t+|fi|soida}}
-* Portuguese: {{t+|pt|assoprar}}
-* Romanian: {{t+|ro|fluiera}}, {{t+|ro|șuiera}}
-{{trans-mid}}
-* Scottish Gaelic: {{t|gd|sèid}}
-* Slovak: {{t|sk|trúbiť}}
-{{trans-bottom}}
-
-{{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--7-->
-* Chinese:
-*: Mandarin: {{t+|cmn|喘氣|tr=guā}}, {{t+|cmn|喘气|tr=chuǎnqì}}
-* Dutch: {{t+|nl|spuiten}}
-* Finnish: {{t+|fi|suihkuttaa}}, {{t+|fi|puhaltaa}}
-* Korean: {{t|ko|뿜다}}
-* Maori: {{t|mi|pipiha}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|assoprar}}
-* Scottish Gaelic: {{t|gd|sèid}}
-* Swedish: {{t+|sv|blåsa}}
-* Vietnamese: {{t|vi|phun nước}}
-{{trans-bottom}}
-
-{{trans-top|to explode}} <!--8-->
-* Armenian: {{t+|hy|պայթել}}
-* Bulgarian: {{t|bg|взривявам се}}, {{t+|bg|експлодирам}}
-* Chinese:
-*: Mandarin: {{t+|cmn|爆炸|tr=bàozhà}}
-* Danish: {{t|da|sprænge}}
-* Dutch: {{t+|nl|springen}}, {{t+|nl|ontploffen}}
-* Finnish: {{t+|fi|räjähtää}}
-* French: {{t+|fr|péter}}, {{t+|fr|sauter}}
-* German: {{t+|de|hochgehen}}, [[in]] [[die]] [[Luft]] {{t+|de|gehen}}, {{t+|de|explodieren}}
-* Hebrew: {{t|he|התפוצץ|tr=hitpotzétz}}
-{{trans-mid}}
-* Japanese: {{t+|ja|爆発|tr=[[ばくはつ]]する, bakuhatsusuru|alt=爆発する}}
-* Korean: {{t+|ko|터지다}}
-* Latvian: {{t|lv|sprāgt}}
-* Macedonian: {{t|mk|се распрснува}}
-* Polish: {{t+|pl|wybuchać|impf}}, {{t+|pl|wybuchnąć|pf}}
-* Portuguese: {{t+|pt|explodir}}, {{t+|pt|estourar}}
-* Russian: {{t+|ru|взрыва́ться|impf}}, {{t+|ru|взорва́ться|pf}}, {{t|ru|взлета́ть на во́здух|impf}}, {{t+|ru|взлете́ть на во́здух|pf}}
-* Vietnamese: {{t+|vi|nổ}}
-{{trans-bottom}}
-
-{{trans-top|to cause to explode}} <!--9-->
-* Finnish: {{t+|fi|räjäyttää}}
-* French: [[faire]] {{t+|fr|sauter}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|explodir}}, {{t+|pt|estourar}}
-* Swedish: {{t+|sv|spränga}}
-{{trans-bottom}}
-
-{{trans-top|to cause sudden destruction}} <!--10-->
-* Finnish: {{t+|fi|rikkoa}}, {{t+|fi|särkeä}}, {{t+|fi|polttaa}} {{q|by electric current}}
-* French: {{t+|fr|péter}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|detonar}}
-* Spanish: {{t+|es|reventar}}
-{{trans-bottom}}
-
-{{trans-top|to fail suddenly destructively}} <!--11-->
-* Finnish: {{t+|fi|rikkoutua}}, {{t+|fi|särkyä}}, {{t+|fi|palaa}} {{q|by electric current}}
-* Slovak: {{t|sk|rupnúť}}
-{{trans-mid}}
-* Spanish: {{t+|es|arruinar}}, {{t+|es|cagar}}
-{{trans-bottom}}
-
-{{trans-top|be very undesirable}} <!--12-->
-* Chinese:
-*: Mandarin: {{t|cmn|搞砸|tr=gǎozá}}
-* Finnish: {{t|fi|[[olla]] [[syvä|syvältä]]}}
-* French: [[être]] {{t+|fr|nul|m}}, [[faire]] {{t+|fr|chier}}
-* Korean: {{qualifier|interjection}} {{t+|ko|제기랄}}
-{{trans-mid}}
-* Portuguese: {{t|pt|[[ser]] [[ruim]]/[[uma]] [[porcaria]], [[uma]] [[merda]]}}
-* Spanish: {{t+|es|apestar}}
-* Vietnamese: {{t+|vi|tẽn tò}}, {{t+|vi|tẽn}}, {{t+|vi|thẹn thò}}, {{t+|vi|thẹn}}
-{{trans-bottom}}
-
-{{trans-top|to squander}} <!--13-->
-* Chinese:
-*: Mandarin: {{t+|cmn|浪費}}, {{t+|cmn|浪费|tr=làngfèi}}
-* Dutch: {{t+|nl|doorjagen}}
-* Finnish: {{t+|fi|tuhlata}}, {{t+|fi|törsätä}}
-* French: {{t+|fr|claquer}}, {{t+|fr|flamber}}
-* Korean: {{t+|ko|날리다}}
-* Polish: {{t+|pl|przepuszczać|impf}}, {{t+|pl|przepuścić|pf}}
-{{trans-mid}}
-* Portuguese: {{t|pt|jogar fora}}
-* Russian: {{t+|ru|продува́ть|impf}}, {{t+|ru|проду́ть|pf}}
-* Slovak: {{t|sk|vyhodiť}}, {{t|sk|vyhadzovať}}
-* Spanish: {{t+|es|cagar}}
-* Vietnamese: {{t|vi|xài phí}}, {{t+|vi|phung phí}}
-{{trans-bottom}}
-
-{{trans-top|to fellate}} <!--14-->
-* Armenian: {{t+|hy|ծծել}}
-* Bulgarian: {{t+|bg|духам}}
-* Catalan: {{t+|ca|llepar}}
-* Dutch: {{t+|nl|pijpen}}
-* Finnish: {{t+|fi|ottaa suihin}}
-* French: {{t+|fr|sucer}}, [[tailler]] une {{t+|fr|pipe}} (''to hew, or to grave, a smoking pipe'')
-* German: {{t+|de|blasen}}
-* Greek: {{t+|el|τσιμπουκώνω}}, {{t+|el|πιπώνω}}, {{t|el|παίρνω πίπα}}
-* Korean: {{t|ko|아양떨다}}
-* Macedonian: {{t|mk|пуши}}, {{t|mk|дудла}}
-* Persian: {{t|fa|ساک زدن|tr=sâk zadan}}
-{{trans-mid}}
-* Polish: {{t+|pl|robić loda}}, {{t|pl|lizać pałę}}, {{t|pl|obciągać loda}}, {{t|pl|obciągać fiuta}}, {{t|pl|obciągać chuja}}
-* Portuguese: {{t+|pt|chupar}}
-* Russian: {{t+|ru|соса́ть|impf}}, {{t+|ru|отсоса́ть|pf}}
-* Serbo-Croatian:
-*: Cyrillic: {{t|sh|пу̏шити}}
-*: Roman: {{t+|sh|pȕšiti}}
-* Slovak: {{t|sk|fajčiť}}, {{t|sk|vyfajčiť}}
-* Spanish: {{t+|es|chupar}}, {{t+|es|mamar}}
-* Swedish: {{t|sv|suga av}}
-* Vietnamese: {{t|vi|bú cu}}
-{{trans-bottom}}
-
-{{trans-top|to leave}} <!--15-->
-* Chinese:
-*: Mandarin: {{t+|cmn|離開}}, {{t+|cmn|离开|tr=líkāi}}
-* Finnish: {{t+|fi|häipyä}}
-* French: {{t+|fr|se casser}}, se {{t+|fr|tirer}}, [[mettre]] les {{t+|fr|voiles}}
-* Korean: {{t+|ko|그만두다}}
-{{trans-mid}}
-* Polish: {{t|pl|zwiewać|impf}}, {{t+|pl|zwiać|pf}}
-* Portuguese: {{t+|pt|vazar}}, {{t+|pt|sair}}
-* Spanish: {{t+|es|ir}}, {{t+|es|largar}}
-* Vietnamese: {{t+|vi|bỏ đi}}, {{t+|vi|chuồn}}
-{{trans-bottom}}
-
-{{trans-top|to make flyblown}}
-* Maori: {{t|mi|kurekure}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{checktrans-top}}<!--intransitive meanings-->
-* Esperanto: {{t+check|eo|blovi}}
-* Indonesian: {{t+check|id|meniup}}, {{t-check|id|meledakkan}} <!-- link as t-SOP if non-idiomatic; put marked word in |alt=; see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
-{{trans-mid}}
-* Telugu: {{t+check|te|ఊదు}}, {{t-check|te|కొట్టుకొనిపోవు}}, {{t+check|te|వీచు}}
-{{trans-bottom}}
-
-====Noun====
-{{en-noun}}
-
-# A strong [[wind]].<!--4-->
-#: ''We're having a bit of a '''blow''' this afternoon.''
-# {{lb|en|informal}} A chance to catch one’s breath.<!--5-->
-#: ''The players were able to get a '''blow''' during the last timeout.''
-# {{lb|en|uncountable|US|slang}} [[cocaine|Cocaine]].<!--3-->
-# {{lb|en|uncountable|UK|slang}} [[cannabis|Cannabis]].<!--3-->
-# {{lb|en|uncountable|US Chicago Regional|slang}} [[heroin|Heroin]].<!--3-->
-
-=====Synonyms=====
-* {{sense|cocaine}} {{l|en|snow}}
-
-=====Translations=====
-{{trans-top|strong wind}}
-* Finnish: {{t+|fi|puhuri}}, {{t|fi|[[kova]] [[tuuli]]}}
-* German: {{t+|de|Böe|f}}
-* Italian: {{t+|it|ventata|f}}, {{t+|it|folata|f}}
-* Macedonian: {{t|mk|виор|m}}
-* Portuguese: {{t+|pt|ventania|f}}
-{{trans-mid}}
-* Romanian: {{t+|ro|furtună|f}}
-* Slovak: {{t|sk|vietor}}
-* Swedish: {{t+|sv|blåst|c}}
-{{trans-bottom}}
-
-{{trans-top|chance to catch one’s breath}}
-* Finnish: {{t+|fi|hengähdystauko}}, {{t|fi|[[henki|henkeä]]}}
-* Macedonian: {{t|mk|здив|m}}
-* Romanian: {{t+|ro|suflare|f}}, {{t+|ro|răsuflare}}
-{{trans-mid}}
-* Russian: {{t+|ru|переды́шка|f}}
-{{trans-bottom}}
-
-{{trans-see|cocaine|snow}}
-
-===Etymology 2===
-From {{inh|en|enm|blo}}, {{m|enm|bloo}}, from {{inh|en|ang|blāw||blue}}, from {{inh|en|gem-pro|*blēwaz||blue, dark blue, grey, black}}, from {{der|en|ine-pro|*bʰlēw-||yellow, blond, grey}}. Cognate with {{cog|la|flavus||yellow}}. More at {{l|en|blue}}.
-
-====Adjective====
-{{en-adj|er|more}}
-
-# {{lb|en|now|chiefly|dialectal|Northern England}} [[blue|Blue]].
-
-===Etymology 3===
-From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blēwe}}, from {{inh|en|gem-pro|*blewwaną|t=to beat}} (compare {{cog|non|blegði|t=wedge}}, {{cog|de|bläuen}}, {{cog|dum|blouwen}}). Related to [[block]].
-
-====Noun====
-{{en-noun}}
-
-# the act of [[striking]] or [[hit]]ting<!--1-->
-#: {{ux|en|A fabricator is used to direct a sharp '''blow''' to the surface of the stone.}}
-#: {{ux|en|During an exchange to end round 13, Duran landed a '''blow''' to the midsection.}}
-#: {{syn|en|bace|strike|hit|punch}}
-# a sudden or forcible act or effort; an assault
-#* T. Arnold
-#*: A vigorous '''blow''' might win [Hanno's camp].
-# a [[damaging]] [[occurrence]].<!--2-->
-#: {{ux|en|A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.}}
-#* Shakespeare
-#*: a most poor man, made tame to fortune's '''blows'''
-#* {{quote-journal|lang=en|date=April 15, 2011
-|author=Saj Chowdhury
-|title=Norwich 2 - 1 Nott'm Forest
-|work=BBC Sport
-|url=http://news.bbc.co.uk/sport2/hi/football/13009332.stm
-|page=
-|passage=Norwich returned to second in the Championship with victory over Nottingham Forest, whose promotion hopes were dealt another '''blow'''.}}
-#: {{syn|en|disaster|calamity}}
-
-=====Derived terms=====
-{{der4
-|en|blow-by-blow
-|body blow
-|come to blows
-|low blow
-}}
-
-=====Translations=====
-{{trans-top|act of striking or hitting}}
-* Arabic: {{t|ar|ضَرْبَة|f}}
-* Armenian: {{t+|hy|հարված}}
-* Basque: {{t|eu|kolpe}}
-* Bulgarian: {{t+|bg|удар|m}}
-* Catalan: {{t+|ca|cop|m}}
-* Dutch: {{t+|nl|slag|m}}
-* Esperanto: {{t|eo|bato}}, {{t|eo|frapo}}
-* Finnish: {{t+|fi|isku}}
-* French: {{t+|fr|coup|m}}
-* Galician: {{t+|gl|golpe|m}}
-* German: {{t+|de|Schlag|m}}
-* Greek:
-*: Ancient Greek: {{t|grc|πληγή|f}}
-* Hungarian: {{t+|hu|csapás}}
-* Ido: {{t+|io|frapo}}
-* Irish: {{t+|ga|béim|f}}, {{t|ga|cíonán|m}}
-* Italian: {{t+|it|botta|f}}, {{t+|it|colpo|m}}
-* Kyrgyz: {{t+|ky|сокку|m}}
-{{trans-mid}}
-* Macedonian: {{t|mk|удар|m}}
-* Maori: {{t|mi|tarawete}}
-* Norwegian:
-*: Bokmål: {{t+|nb|slag|n}}
-*: Nynorsk: {{t|nn|slag|n}}
-* Old English: {{t|ang|sleġe|m}}
-* Portuguese: {{t+|pt|golpe|m}}
-* Romanian: {{t+|ro|lovitură|f}}
-* Romansch: {{t|rm|frida|f}}, {{t|rm|freida|f}}, {{t|rm|cuolp|m}}
-* Russian: {{t+|ru|уда́р|m}}
-* Scottish Gaelic: {{t|gd|beum|m}}, {{t|gd|bualadh|m}}, {{t|gd|buille|f}}
-* Slovak: {{t|sk|úder}}, {{t|sk|rana}}
-* Spanish: {{t+|es|golpe}}
-* Swahili: {{t+|sw|panchi}}
-* Swedish: {{t+|sv|slag|n}}
-* Telugu: {{t+|te|దెబ్బ}}, {{t+|te|వేటు}}
-* Ukrainian: {{t+|uk|уда́р}}
-{{trans-bottom}}
-
-{{trans-top|damaging occurrence}}
-* Armenian: {{t+|hy|հարված}}
-* Catalan: {{t+|ca|cop|m}}
-* Dutch: {{t+|nl|slag|m}}, {{t+|nl|tegenslag|m}}
-* Finnish: {{t|fi|takaisku}}, {{t+|fi|isku}}
-* German: {{t+|de|Rückschlag|m}}
-* Macedonian: {{t|mk|удар|m}}
-* Portuguese: {{t+|pt|desgraça|f}}
-{{trans-mid}}
-* Russian: {{t+|ru|уда́р|m}}
-* Slovak: {{t|sk|rana}}, {{t|sk|úder}}
-* Spanish: {{t+|es|golpe}}
-* Swahili: {{t+|sw|panchi}}
-* Swedish: {{t+|sv|slag|n}}
-* Telugu: {{t+|te|దెబ్బ}}
-* Ukrainian: {{t+|uk|уда́р}}
-{{trans-bottom}}
-
-===Etymology 4===
-{{PIE root|en|bʰleh₃}}
-From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*blōaną}} (compare {{cog|nl|bloeien}}, {{cog|de|blühen}}), from {{der|en|ine-pro|*bʰleh₃-}} (compare {{cog|la|floreo|florēre|t=to bloom}}).
-
-====Verb====
-{{en-verb|blows|blowing|blew|blown}}
-
-# to [[blossom]]; to cause to [[bloom]] or blossom
-#* '''1599''', [[w:William Shakespeare|William Shakespeare]], ''[[w:Much Ado About Nothing|Much Ado About Nothing]]'', [[s:Much Ado About Nothing (Shakespeare)|Act 4 Scene 1]]
-#*: You seem to me as [[w:Diana (mythology)|Dian]] in her [[orb]],
-#*: As chaste as is the bud [[ere]] it be '''blown''';
-#* '''1667''', [[w:John Milton|John Milton]], Paradise Lost, [[s:Paradise Lost (1667)/Book V|Book 5]]
-#*: How '''blows''' the citron grove.
-#* '''1784''', William Cowper, ''Tirocinium; or, A Review of Schools''
-#*: Boys are at best but pretty buds '''unblown''',
-#*: Whose scent and hues are rather guessed than known;
-#* {{quote-journal|lang=en|author=Mark Diacono|authorlink=Mark Diacono|title=How to grow and cook cauliflower, 2015's trendiest veg: Tricky to grow, boring to boil&nbsp;... so why is the outmoded cauliflower back at the culinary cutting edge? &#91;print version: Cauliflower power, 24 January 2015, p.&nbsp;G3&#93;|url=http://www.telegraph.co.uk/gardening/11362662/How-to-grow-and-cook-cauliflower-2015s-trendiest-veg.html|work={{w|The Daily Telegraph}} (Gardening)|date=26 January 2015|passage=[[w:Romanesco broccoli|Romanesco]] is slow to '''blow''' and more forgiving to grow than most cauliflowers, while being perhaps the most delicious and certainly the nuttiest-flavoured of the lot.}}
-
-=====Related terms=====
-* {{l|en|full-blown}}
-
-=====Translations=====
-{{trans-see|blossom}}
-
-====Noun====
-{{en-noun}}
-
-# a mass or display of flowers; a yield
-#* {{quote-journal|lang=en|1710|{{w|Joseph Addison}}|From my own apartment, August 29|The Tatler|https://quod.lib.umich.edu/e/ecco/004786805.0001.000|181|he could shew me such a '''blow''' of tulips as was not to be matched in the whole country.}}
-# a display of anything [[brilliant]] or [[bright]]
-# a [[bloom]], state of [[flowering]]
-#: {{ux|en|roses in full '''blow'''.}}
-
-=====Related terms=====
-* {{l|en|ablow}}
-
-=====Translations=====
-{{trans-top|mass or display of flowers}}
-* Finnish: {{t|fi|kukkaloisto}}
-{{trans-mid}}
-* Swedish: {{t+|sv|blom|c}}
-{{trans-bottom}}
-
-{{trans-top|display of anything brilliant}}
-* Finnish: {{t+|fi|loisto}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|state of flowering}}
-* Finnish: {{t+|fi|kukinta}}, {{t+|fi|loisto}}
-{{trans-mid}}
-* Swedish: {{t+|sv|blom|c}}
-{{trans-bottom}}
-
-===Anagrams===
-* {{anagrams|en|a=blow|bowl}}
-
-[[Category:English basic words]]
-[[Category:English class 7 strong verbs]]
-[[Category:English irregular verbs]]
-[[Category:en:Colors]]
-[[Category:en:Marijuana]]
-[[Category:en:Recreational drugs]]
-[[Category:en:Singing]]
-[[Category:en:Wind]]
-
-----
+Can you do the Opening to Battle for Terra 2009 DVD?
 
 ==Middle English==
 
