/* Etymology 2 */ I'm surprised that this isn't noted yet. <quack#53451014>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -99,7 +99,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 <references/>
 
 ===Etymology 2===
-{{clipping|en|quacksalver}}, from {{der|en|dum|kwaksalver||hawker of salve}} (modern {{cog|nl|kwakzalver}}), from {{m|dum|quacken||to brag, boast; to croak}}.
+{{clipping|en|quacksalver}}, from {{der|en|dum|kwaksalver||hawker of salve}} (modern {{cog|nl|kwakzalver}}), from {{m|dum|quacken||to brag, boast; to croak}}. Ultimately related to etymology one, above.
 
 ====Noun====
 {{en-noun}}
