--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -288,6 +288,7 @@ Alteration of {{m|en|boun}}, with '''-d''' partly for [[euphonic]] effect and pa
 ## Ready to start or go (to); moving in the direction (of).
 #: ''Which way are you '''bound'''?
 #: ''Is that message '''bound''' for me?
+#* {{RQ:Shakespeare Tempest|act=I|scene=ii|page=4|passage={{smallcaps|Ariel}}: {{...}}and for the reſt o'th' Fleet / (Which I diſpers'd) they all haue met againe, / And are vpon the ''Mediterranean'' [[flote|Flote]] / '''Bound''' ſadly home for ''Naples'', / Suppoſing that they ſaw the King[['s|s]] ſhip wrackt, / And his great perſon periſh.}}
 
 =====Derived terms=====
 {{rel-top|terms derived from the adjective ''bound'' ("moving in the direction of")}}
