--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -65,6 +65,7 @@ From {{m|en|bend}}.
 *: Ancient: {{t|grc|σκολιός}}, {{t|grc|καμψός}}
 * Hungarian: {{t+|hu|hajlott}}, {{t+|hu|görbe}}
 * Indonesian: {{t+|id|bengkok}}
+* Interlingue: {{t|ie|curvat}}
 * Italian: {{t+|it|piegato|m}}, {{t+|it|ripiegato|m}}
 * Khmer: {{t+|km|រំពត់|tr=rumpʊət|sc=Khmr}}
 {{trans-mid}}
@@ -132,6 +133,7 @@ From {{m|en|bend}}.
 * Bulgarian: {{t+|bg|влечение|n}}
 * Dutch: {{t+|nl|aanleg|m}}
 {{trans-mid}}
+* Interlingue: {{t|ie|inclination}}
 * Italian: {{t+|it|talento|m}}
 * Spanish: {{t+|es|inclinación|f}}
 {{trans-bottom}}
