--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -39,6 +39,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Hebrew: {{t|he|התערבות|f|tr=hitarvut}}
 * Hungarian: {{t+|hu|fogadás}}
 * Icelandic: {{t|is|veðmál|n}}
+* Interlingue: {{t|ie|parí}}
 * Italian: {{t+|it|scommessa|f}}
 * Khmer: {{t+|km|ទូ}}
 {{trans-mid}}
@@ -128,6 +129,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Icelandic: {{t-needed|is}}
 * Indonesian: {{t+|id|taruh}}
 {{trans-mid}}
+* Interlingue: {{t|ie|pariar}}
 * Italian: {{t+|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=かける, kakeru}}
 * Khmer: {{t+|km|ភ្នាល់|tr=pnoal|sc=Khmr}}
