t+de:[[Geldverleiher]] t+de:[[Geldverleiherin]] ([[WT:EDIT|Assisted]]) <moneylender#53472798>

--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -15,6 +15,7 @@
 * French: {{t+|fr|usurier|m}}, {{t+|fr|prêteur|m}}
 * Galician: {{t+|gl|prestamista|m|f}}
 * Georgian: {{t|ka|მევახშე}}
+* German: {{t+|de|Geldverleiher|m}}, {{t+|de|Geldverleiherin|f}}
 * Greek: {{t+|el|τοκιστής|m}}
 *: Ancient: {{t|grc|δανειστής|m}}
 {{trans-mid}}
