/* Numeral */Seveneteen <seize#53473066>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -204,4 +204,4 @@ From {{inh|nrf|fro|seize}}, from {{inh|nrf|la|sēdecim}}.
 ===Numeral===
 {{head|nrf|numeral}}
 
-# {{cln|nrf|cardinal numbers}} {{lb|nrf|Jersey|Guernsey}} [[sixteen]]
+# {{cln|nrf|cardinal numbers}} {{lb|nrf|Jersey|Guernsey}} [[seventeen]]
