--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -73,6 +73,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 * Portuguese: {{t+|pt|consumir}}
 * Romanian: {{t+|ro|consuma}}
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|расходовать}}
+* Thai: {{t|th|อุปโภค}}, {{t+|th|ใช้}}
 * Turkish: {{t+|tr|kullanmak}}, {{t+|tr|harcamak}}
 * Vietnamese: {{t+|vi|dùng}}, {{t+|vi|tiêu thụ}}
 {{trans-bottom}}
@@ -100,6 +101,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 * Portuguese: {{t+|pt|consumir}}
 * Romanian: {{t+|ro|consuma}}
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|поедать}}
+* Thai: {{t+|th|บริโภค}}, {{t+|th|กิน}}
 * Turkish: {{t+|tr|yemek}}, {{t+|tr|tüketmek}}
 * Vietnamese: {{t+|vi|ăn}}
 {{trans-bottom}}
