--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -230,7 +230,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Irish: {{t|ga|séid}}
 {{trans-mid}}
 * Korean: {{t+|ko|불다}}
-* Maori: {{t|mi|pūawhe}}
+* Maori: {{t|mi|pūawhe}}, {{t|mi|pongipongi}}
 * Polish: {{t|pl|zdmuchnąć}}
 * Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
 * Russian: {{t+|ru|сдува́ть|impf}}, {{t+|ru|сдуть|pf}}
