--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -245,7 +245,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ===Verb===
 {{en-verb|simpl}}
 
-# {{lb|en|transitive|intransitive|archaic}} To gather simples, i.e., medicinal herbs.
+# {{lb|en|transitive|intransitive|archaic}} To gather simples, i.e. medicinal herbs.
 
 ====Derived terms====
 * {{l|en|simpler}}
