--- a/en/s/signal phrase.803556.wikitext
+++ b/en/s/signal phrase.803556.wikitext
@@ -6,11 +6,11 @@
 ===Noun===
 {{en-noun}}
 
-# An indication that something is a direct [[quote]].
+# An indication that something is a [[paraphrase]] or direct [[quote]].
 #: ''"Smith suggests that..." and "In Smith's words..." are both '''signal phrases'''.''
 #* {{quote-book|en|1993|Sheila Cooper and Rosemary Patton|Ergo: Thinking Critically and Writing Logically||220|Introduce the material being cited with a '''signal phrase''', usually the authors name, and use a parenthetical citation stating the page number of the sentence.}}
 # A [[phrase]] that [[signal]]s a particular meaning or stance.
 #* {{quote-book|en|1996|Mary Ann Christensen|Interpreting Literature & the Arts||76|To identify an opinion, look for '''signal phrases''' such as “I think,” “I consider,” “I'm convinced,” “I guess,” “I believe,” or “I feel.”}}
 
 ===References===
-* http://www.englishdiscourse.org/signal.html
+* {{cite-web|2007|John Richard Stevens|Signal phrases|Writing Better Essays|url=http://www.englishdiscourse.org/signal.html|archiveurl=https://web.archive.org/web/20070814023013/http://www.englishdiscourse.org/signal.html|archivedate=August 14, 2007}}
