t+bg:[[коза]] ([[WT:EDIT|Assisted]]) <she-goat#53544367>

--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -12,6 +12,7 @@ From {{af|en|she-|goat}}.
 ====Translations====
 {{trans-top|female goat}}
 * Armenian: {{t+|hy|այծ}}
+* Bulgarian: {{t+|bg|коза́|f}}
 * Dalmatian: {{t|dlm|capraina|f}}
 * Esperanto: {{t|eo|kaprino}}
 * Finnish: {{t+|fi|kuttu}}
