--- a/en/f/felsic.776709.wikitext
+++ b/en/f/felsic.776709.wikitext
@@ -7,11 +7,17 @@
 {{en-adj}}
 
 # {{lb|en|mineralogy}} Enriched in the lighter elements such as silicon, oxygen, aluminium, sodium, and potassium.
+#* '''1954''', J. C. Olson, D. R. Shawe, L. C. Pray, W. N. Sharp, ''Rare-Earth Mineral Deposits of the Mountain Pass District, San Bernadino County, California'', {{w|U.S. Geological Survey}} Professional Paper 261, {{w|United States Department of the Interior|U.S. Department of the Interior}}, [https://books.google.com.au/books?id=vEtXAAAAMAAJ&pg=PA22&dq=%22more%7Cmost+felsic%22&hl=en&sa=X&ved=0ahUKEwjG-9vZ7p_jAhW0H7cAHRDaCHUQ6AEINjAD#v=onepage&q=%22more%7Cmost%20felsic%22&f=false page 22],
+#*: Much of the southern half of the southeastern body is a mafic syenite, slightly more '''felsic''' than the shonkinite.
+#* '''1983''', Paul C. Bateman, ''A summary of critical relations in the central part of Sierra Nevada batholith, California, U.S.A.'', J. A. Roddick (editor), ''Circum-Pacific Plutonic Terranes'', {{w|Geological Society of America}} Memoir 159, [https://books.google.com.au/books?id=TMnQndCxVzMC&pg=PA241&dq=%22more%7Cmost+felsic%22&hl=en&sa=X&ved=0ahUKEwjG-9vZ7p_jAhW0H7cAHRDaCHUQ6AEIUjAJ#v=onepage&q=%22more%7Cmost%20felsic%22&f=false page 241],
+#*: Within comagmatic suites, successively younger granitoids are commonly, but not invariably, more '''felsic''', representing progressively lower temperature mineral assemblages. 
+#* '''1992''', David C. Champion, Bruce W. Chappell, ''Petrogenesis of '''felsic''' I-type granites: an example from northern Queensland'', P. E. Brown, B. W. Chappell (editors), ''The Second Hutton Symposium on the Origin of Granites and Related Rocks'', Proceedings, {{w|Geological Society of America}} Special Paper 272, [Originally published in ''Transactions of the {{w|Royal Society of Edinburgh}}: Earth Sciences, Volume 83''], [https://books.google.com.au/books?id=tUgCAQAAQBAJ&pg=PA115&dq=%22more%7Cmost+felsic%22&hl=en&sa=X&ved=0ahUKEwjG-9vZ7p_jAhW0H7cAHRDaCHUQ6AEIMTAC#v=onepage&q=%22more%7Cmost%20felsic%22&f=false page 115],
+#*: The Claret Creek Supersuite granites are a little more '''felsic''' (65-77% <chem>SiO2</chem>), and are chemically distinctive, having higher <chem>Al2O3</chem>, <chem>CaO</chem>, <chem>Na2O</chem> and <chem>Sr</chem>, and lower <chem>K2O</chem>, <chem>Rb</chem>, <chem>Th</chem> and <chem>U</chem> than the granites of the Almaden Supersuite.
 
 ====Synonyms====
 * {{l|en|acidic}}
 
-====Antonyms====
+====Coordinate terms====
 * {{l|en|mafic}}
 
 ====Related terms====
@@ -21,5 +27,9 @@
 {{en-noun}}
 
 # A rock with such properties.
+#* '''1953''', R. C. Emmons, ''Chapter 6: Petrogeny of the Syenites and Nepheline Syenites of Central Wisconsin'', R. C. Emmons (editor), ''Selected Petrogenic Relationships of Plagioclase'', {{w|Geological Society of America}} Memoir 52, [https://books.google.com.au/books?id=C0hIKuD4tg8C&pg=PA80&dq=%22felsics%22&hl=en&sa=X&ved=0ahUKEwjh1OiZ_5_jAhXDXCsKHZg-AngQ6AEIRzAG#v=onepage&q=%22felsics%22&f=false page 80],
+#*: The central part of this nepheline syenite is very white '''felsics''' with black mafics in it. The entire area contains many nepheline-bearing dike rocks, but almost all are gray or pink or even red due to the color in the '''felsics'''.
+#* '''1992''', T. E. Smith, ''Chapter 1: Volcanic Rocks of Early Proterozoic Greenstone Belts'', K. C. Condie (editor), ''Proterozoic Crustal Evolution'', Elsevier, [https://books.google.com.au/books?id=nHfwi-mXYgIC&pg=PA35&dq=%22felsics%22&hl=en&sa=X&ved=0ahUKEwjh1OiZ_5_jAhXDXCsKHZg-AngQ6AEIdTAP#v=onepage&q=%22felsics%22&f=false page 35],
+#*: There are also calcalkaline '''felsics''' that have highly enriched LREE<sup>[light rare-earth element]</sup> patterns with lower overall abundances.
 
 [[Category:en:Rocks]]
