--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -16,7 +16,7 @@ From {{compound|en|saw|tooth}}
 
 # {{lb|en|plural "sawteeth"}} A cutting [[bit]] of a [[saw]].
 # {{lb|en|plural "sawtooths"}} A [[sawtooth wave]].
-# {{lb|en|plural "sawtooths"}} {{lb|en|entomology}} Any of various [[pierid]] butterflies of the genus ''[[w:Prioneris|Prioneris]]''.
+# {{lb|en|plural "sawtooths"}} {{lb|en|entomology}} Any of various [[pierid]] butterflies of the genus {{taxlink|Prioneris|genus|ver=190708}}.
 
 ====Translations====
 {{trans-top|cutting bit of a saw}}
