--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -367,6 +367,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 {{trans-see|to cry, weep|weep}}
 
 ====References====
+* {{R:OneLook}}
 * {{R:Dobson & Irwin Newcastle 1970}}
 * {{R:New Geordie Dictionary 1987}}
 * {{R:Northeast Dialect 2005}}
