--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -147,12 +147,12 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * German: {{t+|de|Anzeige|f}}, {{t+|de|Bekanntmachung|f}}
 * Greek: {{t+|el|διαφήμιση|f}}, {{t+|el|αγγελία|f}}
 * Hebrew: {{t+|he|מוֹדָעָה|f|tr=moda'a|sc=Hebr}}
-* Hungarian: {{t+|hu|közlemény}}, {{t+|hu|értesítés}}
+* Hungarian: {{t+|hu|közlemény}}, {{t+|hu|értesítés}}, {{t+|hu|hirdetmény}}
 * Interlingue: {{t|ie|anuncie}}
 * Kurdish:
 *: Sorani: {{t+|ku|بۆزانین}}
-* Kyrgyz: {{t+|ky|жарыя}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|жарыя}}
 * Latvian: {{t|lv|sludinājums|m}}
 * Macedonian: {{t|mk|о́глас|m}}
 * Maori: {{t|mi|pānui}}, {{t|mi|whakaaturanga}}
