--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -260,11 +260,21 @@ From {{inh|sl|sla-pro|*syrъ}}, derived from "sour milk"
 
 ==Uzbek==
 
-===Noun===
+===Etymology 1===
+From {{bor|uz|ru|сыр}}.
+
+====Noun====
+{{uz-noun}}
+
+# [[cheese]]
+
+===Etymology 2===
+From {{bor|uz|ar|سِرّ}}.
+
+====Noun====
 {{uz-noun}}
 
 # [[secret]]
-# [[cheese]]
 
 ----
 
