--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -118,7 +118,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 
 ====Translations====
 {{trans-top|process of becoming rotten}}
-* Latin: {{t|la|cariēs|f}}
+* Latin: {{t|la|cariēs|f}}, {{t|la|tabēs|f}}
 {{trans-mid}}
 * Spanish: {{t+|es|putrefacción}}, {{t+|es|podre}}
 {{trans-bottom}}
