t+ru:[[целевая функция]] ([[WT:EDIT|Assisted]]) <objective function#53626773>

--- a/en/o/objective function.774534.wikitext
+++ b/en/o/objective function.774534.wikitext
@@ -12,4 +12,5 @@
 * Hungarian: {{t|hu|célfüggvény}}
 {{trans-mid}}
 * Icelandic: {{t|is|kostnaðarfall|n}}, {{t|is|viðfangsfall|n}}
+* Russian: {{t|ru|целевая функция}}
 {{trans-bottom}}
