--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -7,7 +7,7 @@
 Colloquial form of {{m|en|yea}} or {{m|en|yes}}.
 
 ===Pronunciation===
-* {{IPA|[jɛə̯]|lang=en}}, {{IPAchar|[jɛ.ə]}}, or {{IPAchar|[jæə̯]}}
+* {{IPA|[jɛ]|lang=en}}, {{IPAchar|[je]}},
 * {{audio|en-us-yeah.ogg|Audio (US)|lang=en}}
 * {{audio|en-us-yeah-interjection.ogg|Audio (US, interjection)|lang=en}}
 * {{rhymes|ɛə|lang=en}}
