--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -212,6 +212,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
+* Interlingue: {{t|ie|pesa}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
