--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -141,6 +141,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Icelandic: {{t+|is|þyngd}}
 * Ido: {{t+|io|pezo}}
 * Indonesian: {{t+|id|berat}}, {{t+|id|bobot}}
+* Interlingue: {{t|ie|pesa}}, {{t|ie|póndere}}
 * Irish: {{t|ga|meáchan|m}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t+|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
