--- a/en/q/quibbly.803406.wikitext
+++ b/en/q/quibbly.803406.wikitext
@@ -11,13 +11,13 @@ From {{suffix|en|quibble|y}}.
 
 # [[fussy|Fussy]]; [[quibble|quibbling]].
 #* '''1859:''' John Solomon Rarey, ''The Art of Taming Horses'', p. 15
-#*: considering the docility of the high-bred Arab horse and the intractableness of the '''quibly''', roughly broken praire or Pampas horse
+#*: considering the docility of the high-bred Arab horse and intractableness of the '''quibly''', roughly broken prairie or Pampas horse
 #* '''1920:''' Gerald Stanley Lee, ''The Ghost in the White House'', p. xv
-#*: We give notice that thousands of our most complacently puttering, most '''quibbly''' and fuddly politicans are going to be taken out by the people, lifted up by the people, and dropped kindly but firmly over the edge of the world.
+#*: We give notice that thousands of our most complacently puttering, most '''quibbly''' and fuddly politicians are going to be taken out by the people, lifted up by the people, and dropped kindly but firmly over the edge of the world.
 #* '''1926:''' Charles Robert Gibson, ''Heroes of the Scientific World'', p. 229
 #*: the Quaker said, “I tell thee what, Humphry, thou art the most '''quibbly''' hand at a dispute I ever met with in my life.”
 #* '''1956:''' Edward Hoagland, ''Cat Man'', p. 134
-#*: The voice sounded mellow and reasonable, but the mans was as '''quibbly''' and higgly a guy as you could find.
+#*: The voice sounded mellow and reasonable, but the man was as '''quibbly''' and higgly a guy as you could find.
 #* '''1992:''' Martin Bronfenbrenner, review of ''The Japanese Economy'' by Takatoshi Ito, in the ''Southern Economic Journal'', vol. 59, no. 2, p. 324
 #*: A remarkable performance, both piece by piece and all in all, but with items for '''quibbly''' reviewers to quibble about. This reviewer too is on the '''quibbly''' side, with four quibbles.
 # Involving [[quibble]]s.
