--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -14,7 +14,8 @@
 
 ===Pronunciation===
 * {{ca-IPA}}
-* {{rhymes|a(ɾ)|lang=ca}}
+* {{homophones|ca|abandonà}}
+* {{rhymes|ca|a(ɾ)}}
 
 ===Verb===
 {{ca-verb}}
