--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -268,6 +268,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-top|latest fad or fashion}}
 * Finnish: {{t+|fi|juttu}}
 {{trans-mid}}
+* Swedish: {{t+|sv|grej|c}}
 {{trans-bottom}}
 
 {{trans-top|clothes, possessions or equipment}}
