--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -14,7 +14,7 @@
 * {{homophones|lang=en|rabbet}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{etyl|fr|-}} dialect {{m|frm|rabbotte}}, {{m|frm|rabouillet||baby rabbit}}), from {{etyl|wa|en}} {{m|wa|robète}}, diminutive of {{etyl|dum|en}} {{m|dum|robbe||rabbit; seal}} (compare {{cog|nl|rob||rabbit}}, {{m|nl|rob||seal [sea mammal]}}), from Middle Low German {{m|gml|robbe||seal}} (compare dialectal Low German {{m|nds||Rubb}}, {{m|nds|Robb}}, German {{m|de|Robbe||seal}}), from {{m|gml|rubben||to rub}}. More at {{l|en|rub}}.
+From {{inh|en|enm|rabet}}, from {{der|en|frm|-}} dialect (now found in {{cog|fr|-}} dialect as {{m|frm|rabbotte}}, {{m|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot|t=plane}}), coming via {{cog|wa|-}} {{der|en|fro|-}} (reflected nowadays as {{cog|wa|robète|t=rabbit}}) from {{der|en|dum|robbe|t=rabbit; seal}}. This word is akin to {{cog|gml|robbe}}, {{m|gml|rubbe|t=rabbit}}, and the later {{cog|nds|Rubbe|t=seal}}, {{cog|fy|robbe|t=seal}}, {{cog|stq|robbe|t=seal}}, {{cog|frr|rob|t=seal}}, borrowed into {{cog|de|Robbe|t=seal}}, but is of uncertain motivation; some imitative verb, maybe {{m|dum|robben}}, {{m|gml|rubben|t=to rub}} is used here to allude to a characteristic of the animal.
 
 ====Noun====
 {{en-noun}}
