--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -128,7 +128,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Gujarati: {{t|gu|છેતરપિંડી|f|tr=chētarapiṇḍī|sc=Gujr}}, {{t|gu|બબલ|f|tr=babala|sc=Gujr}}
 * Hausa: {{t|ha|kumfa}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
-* Hindi: {{t+|hi|बुल्ला|m|tr=bullā|sc=Deva}}
+* Hindi: {{t+|hi|बुल्ला|m|tr=bullā|sc=Deva}}, {{t+|hi|बुलबुला|m}}, {{t+|hi|फफोला|m}}, {{t+|hi|बुदबुदा|m}}
 * Hungarian: {{t+|hu|buborék}}
 * Icelandic: {{t+|is|kúla|f}}
 * Ido: {{t+|io|bulo}}
